--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@types/node": "^20.8.6",
-    "bullmq": "^4.12.4",
+    "bullmq": "4.12.8",
     "typescript": "^5.2.2"
   }
 }
